# yandex-translator-api-haskell

./: README.md  Yandex-Translator-API-haskell.cabal  words.txt
src/: Main.hs
