name:                Yandex-Translator-API-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/proj2#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Gorborukov
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable translator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       wreq,
                       transformers,
                       mtl,
                       containers,
                       text,
                       bytestring, 
                       aeson,
                       lens,
                       lens-aeson,
                       time
